--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction:column;
 }
 
-.App-link {
-  color: #61dafb;
+.WeatherContainer{
+	flex:1 2 20vh;
+	background-color:black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ContentContainer{
+	flex:1 4 50vh;
+	border:1px solid black;
+}
+
+.TodoContainer{
+	display:flex;
+	flex:1 3 30vh;
+	background-color:#f5f7cd;
+	justify-content:center;
+	
+}
+h2{
+	margin-top:1vh;
+	margin-bottom:1vh;
+	font-size:5vh;
+	line-height:5vh;
+	height:5vh;
+	font-family: 'Brush Script MT', cursive;
+	color:red;
+}
+ul{
+	margin-top:0;
+	padding-left:0;
+}
+form{
+	margin-bottom:5vh;
+}
+button{
+	float:right;
 }
