--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,20 @@
 }
 
 .WeatherContainer{
-	flex:1 2 20vh;
+	flex:1 1 10vh;
 	background-color:black;
 }
 
 .ContentContainer{
-	flex:1 4 50vh;
+	flex:1 7 70vh;
 	border:1px solid black;
 }
-
+.contentBox{
+	height:100%;
+	margin-top:-2vh;
+	padding:0;
+	
+}
 .TodoContainer{
 	display:flex;
 	flex:1 3 30vh;
@@ -20,7 +25,7 @@
 	justify-content:center;
 	
 }
-h2{
+.todo h2{
 	margin-top:1vh;
 	margin-bottom:1vh;
 	font-size:5vh;
@@ -29,13 +34,44 @@ h2{
 	font-family: 'Brush Script MT', cursive;
 	color:red;
 }
-ul{
-	margin-top:0;
-	padding-left:0;
-}
-form{
+.todo form{
 	margin-bottom:5vh;
 }
-button{
+.todo button{
 	float:right;
+}
+.navbar{
+	height:10vh;
+	background-color:red;
+}
+/*News related classes should be below this line -------*/
+.NewsBox{
+	height:51vh;
+}
+.NewsBox p{
+	font-family: 'Times New Roman', serif;
+	line-height:2.5vh;
+	margin-top:2vh;
+	margin-bottom:0;
+}
+.NewsInnerBox{
+	padding:0;
+	margin:0;
+}
+.NewsUpper{
+	height:15vh;
+	font-weight:bold;
+	font-size:2.7vh;
+}
+.NewsUpper p{
+	margin-top:2.6vh;
+	margin-bottom:1vh;
+}
+.NewsLower{
+	margin-top:0;
+	Height:25vh;
+
+}
+.KeywordBox{
+	height:4vh;
 }
