--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,24 @@
   display: flex;
   flex-direction:column;
 }
-
-.WeatherContainer{
+body{
+	background-image:url('background.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+}
+.HeaderContainer{
 	flex:1 1 10vh;
-	background-color:black;
+	background-color:#ededede9;
+	font-family:'Brush Script MT', cursive;
+	font-size:5vh;
+	line-height:0;
+	text-decoration:black underline;
+	text-align:center;
 }
 
 .ContentContainer{
 	flex:1 7 70vh;
-	border: 2px solid black;
 }
 .contentBox{
 	height:100%;
@@ -18,12 +27,90 @@
 	padding:0;
 	
 }
+
+.navbar{
+	height:10vh;
+	background-color:#ededed;
+}
+/*NEWS CSS STARTS*/
+.NewsBox{
+	margin-left:2vw;
+	margin-right:2vw;
+	margin-bottom:2vh;
+	margin-top:3vh;
+	height:55vh;
+	background-color:#ededede9;
+	border-radius:50px;
+	border: 2px solid black;
+}
+.NewsBox p{
+	font-family: 'Times New Roman', serif;
+	line-height:2.5vh;
+	margin-top:2vh;
+	margin-bottom:0;
+}
+.NewsInnerBox{
+	height:51vh;
+	padding:0;
+	margin:0;
+	
+}
+.NewsUpper{
+	height:15vh;
+	font-weight:bold;
+	font-size:2.5vh;
+	text-align:center;
+}
+.NewsUpper p{
+	margin-top:2.6vh;
+	margin-bottom:1vh;
+	
+}
+.NewsLower{
+	margin-top:3vh;
+	Height:25vh;
+	margin-left:2vw;
+	margin-right:2vw;
+}
+.KeywordBox{
+	
+	display: flex;
+	flex-direction:row;
+	width:80%;
+	margin-left:10%;
+	height:8vh;
+	border-radius:50px;
+	border:1px solid black;
+	justify-content:center;
+	font-size:1.5vh;
+	background-color:white;
+}
+.KeywordText{
+	height:2.5vh;
+	margin-top:0.7vh;
+}
+.KeywordSubmit{
+	border-radius:15px;
+	background-color:white;
+	height:5vh;
+	font-size:3vh;
+	margin-top:1.6vh;
+	
+}
+/*NEWS CSS ENDS ------------*/
+/*TODO-LIST CSS STARTS HERE*/
 .TodoContainer{
 	display:flex;
 	flex:1 3 30vh;
-	background-color:#f5f7cd;
 	justify-content:center;
-	
+	margin-left:2vw;
+	margin-right:2vw;
+	margin-bottom:2vh;
+	margin-top:3vh;
+	height:55vh;
+	background-color:#ededede9;
+	border-radius:50px;
+	border: 2px solid black;
 }
 .todo h2{
 	margin-top:1vh;
@@ -40,60 +127,4 @@
 .todo button{
 	float:right;
 }
-.navbar{
-	height:10vh;
-	background-color:red;
-}
-/*News related classes should be below this line -------*/
-.NewsBox{
-	margin-left:1vw;
-	margin-right:1vw;
-	height:51vh;
-}
-.NewsBox p{
-	font-family: 'Times New Roman', serif;
-	line-height:2.5vh;
-	margin-top:2vh;
-	margin-bottom:0;
-}
-.NewsInnerBox{
-	
-	height:51vh;
-	padding:0;
-	margin:0;
-	
-}
-.NewsUpper{
-	height:15vh;
-	font-weight:bold;
-	font-size:2.7vh;
-}
-.NewsUpper p{
-	margin-top:2.6vh;
-	margin-bottom:1vh;
-}
-.NewsLower{
-	margin-top:0;
-	Height:25vh;
-
-}
-.KeywordBox{
-	background-color:#f5f7cd;
-	display: flex;
-	flex-direction:row;
-	height:8vh;
-	border:1px solid black;
-	justify-content:center;
-	
-}
-.KeywordText{
-	height:2.5vh;
-
-}
-.KeywordSubmit{
-	background-color:white;
-	height:5vh;
-	font-size:3vh;
-	margin-top:2vh;
-	
-}
+/*TODO-LIST CSS ENDS --------*/
